--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.ws/e">best web development software</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -1193,7 +1193,7 @@ In case of non-repayment of the loan, the pledged crypto asset will be automatic
 </section>
 
 <section class="mbr-section--bg-adapted mbr-section--relative extTabs1" id="extTabs1-m" data-rv-view="74" style="background-image: url(assets/images/bg4-1400x710.jpg);">
-    <div class="elements-content" style="padding-top: 100px; padding-bottom: 100px;">
+    <div class="elements-content" style="padding-top: 50px; padding-bottom: 50px;">
         <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(21, 21, 21);"></div>
         <div class="container">
             <div class="row">
